@@ -15,6 +15,8 @@ Changes in version 1.010
 
 - wrap_* functions can now exit with a customized error code.
 
+- Added str_start functions.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
